Added simple makefile Added docs for publish
