# src/docs/swagger.json
@@ -14,7 +14,7 @@
     "host": "blog.abaltra.me/api",
     "basePath": "/v1",
     "paths": {
-        "/v2/tenant/{tenantID/posts": {
+        "/v2/tenant/{tenantID}/posts": {
             "get": {
                 "description": "Create a new post with an auto-generated ID",
                 "consumes": [
@@ -48,6 +48,51 @@
                         "schema": {
                             "$ref": "#/definitions/post.Post"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responsehandler.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responsehandler.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v2/tenant/{tenantID}/posts/{slug}/publish": {
+            "put": {
+                "description": "Publshes an existing Post, adding the proper timestamps",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Publish a Post",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Tenant ID",
+                        "name": "tenantID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Unique slug of the post",
+                        "name": "slug",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
                     },
                     "400": {
                         "description": "Bad Request",
